--- a/src/first.htm
+++ b/src/first.htm
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="index.scss" />
+  </head>
   <body>
     <div class="div-1">
       <p>красный текст ?</p>
