--- a/src/second.htm
+++ b/src/second.htm
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <meta charset="utf-8" />
+  </head>
   <body>
     <div class="div-2">
       <p>зеленый текст ?</p>
