relative img urls in sass (resolve-url-loader)

--- a/src/index-1.htm
+++ b/src/index-1.htm
@@ -4,16 +4,11 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <div class="div-0">
-      first.htm => index.scss (must be blue)
-    </div>
-    <div class="div-1">
-      first.htm => first.js => first.scss (must be red)
-    </div>
-    <hr />
     <div class="root-jquery"></div>
     <div class="root-react"></div>
-    <div class="root-logger-1"></div>
-    <div class="root-logger-2"></div>
+    <section class="bordered-section">
+      <div class="root-logger-1"></div>
+      <div class="root-logger-2"></div>
+    </section>
   </body>
 </html>
